# ChangeLog for www-apps/moodle
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apps/moodle/ChangeLog,v 1.16 2012/01/08 17:47:30 blueness Exp $

*moodle-2.1.4 (08 Jan 2012)
*moodle-2.0.7 (08 Jan 2012)
*moodle-1.9.16 (08 Jan 2012)

  08 Jan 2012; Anthony G. Basile <blueness@gentoo.org> +moodle-1.9.16.ebuild,
  +moodle-2.0.7.ebuild, +moodle-2.1.4.ebuild:
  Version bumps

  07 Dec 2011; Anthony G. Basile <blueness@gentoo.org> -moodle-1.9.14.ebuild,
  -moodle-2.0.5.ebuild, -moodle-2.1.2.ebuild:
  Removed vulnerable versions, bug #393475

*moodle-2.1.3 (29 Nov 2011)
*moodle-2.0.6 (29 Nov 2011)
*moodle-1.9.15 (29 Nov 2011)

  29 Nov 2011; Anthony G. Basile <blueness@gentoo.org> +moodle-1.9.15.ebuild,
  +moodle-2.0.6.ebuild, +moodle-2.1.3.ebuild:
  Version bumps

  19 Oct 2011; Anthony G. Basile <blueness@gentoo.org> -moodle-1.9.13.ebuild,
  -moodle-2.0.4.ebuild, -moodle-2.1.1.ebuild:
  Remove deprecated versions

*moodle-2.1.2 (09 Oct 2011)
*moodle-2.0.5 (09 Oct 2011)
*moodle-1.9.14 (09 Oct 2011)

  09 Oct 2011; Anthony G. Basile <blueness@gentoo.org> +moodle-1.9.14.ebuild,
  +moodle-2.0.5.ebuild, +moodle-2.1.2.ebuild:
  Version bumps

  18 Aug 2011; Anthony G. Basile <blueness@gentoo.org> -moodle-1.9.12.ebuild,
  -moodle-2.0.3.ebuild, -moodle-2.1.ebuild:
  Removed decprecated versions

*moodle-2.1.1 (02 Aug 2011)
*moodle-2.0.4 (02 Aug 2011)
*moodle-1.9.13 (02 Aug 2011)

  02 Aug 2011; Anthony G. Basile <blueness@gentoo.org> +moodle-1.9.13.ebuild,
  +moodle-2.0.4.ebuild, +moodle-2.1.1.ebuild:
  Version bumps

  12 Jul 2011; Anthony G. Basile <blueness@gentoo.org> moodle-1.9.12.ebuild,
  moodle-2.0.3.ebuild, moodle-2.1.ebuild:
  Make moodle depend on either php[gd] or php[gd-external], bug #374605

*moodle-2.1 (09 Jul 2011)

  09 Jul 2011; Anthony G. Basile <blueness@gentoo.org> -moodle-1.9.11.ebuild,
  -moodle-2.0.2.ebuild, +moodle-2.1.ebuild:
  Version bump, removed depcreated

*moodle-2.0.3 (11 May 2011)