@@ -10,18 +10,20 @@ DIST moodle-2.0.6.tgz 22505675 RMD160 9215424a23ef660e95fe7d17845068f03846d9ce S
 DIST moodle-2.0.7.tgz 22512947 RMD160 7ab98f36da35d03aff85f74f4e3392daaecceca5 SHA1 8c2fe470bf3de2150d2ca5878b7deb4457110555 SHA256 6ac7ae83dc5827d2054ab58d6e70a980b18bb28def18704fa5831ca578c6fc12
 DIST moodle-2.1.3.tgz 23918210 RMD160 dfec8f76a46cbb7e95e46e4a5372f27c04e570a5 SHA1 6b600c8126b9dcb585b6df5c211ed094e1b894be SHA256 59eefd04a3cf9cbf875e954b4297d861a7ec64e9ba9c3188d150cabbcd743d07
 DIST moodle-2.1.4.tgz 23938102 RMD160 b6c3993cfcbecca25d2c39bac33dc37a91480055 SHA1 6d8032953d94803a92234b6fb2cc57dcfb1fbb51 SHA256 9d0fe131f6a5cee9ba98bfb5ac1dcef703bec43b77cf5f8e0d6377ea45d80cdb
+DIST moodle-2.2.1.tgz 24892608 RMD160 d6d5e7c4b6c77ccee05fb794ccdfdfcb9029132e SHA1 051cdc4030b961585029302edc8417a096547c59 SHA256 863b8bc071c3999b2a61ffa86ee8fade6b4c121d4690a0fd74450648f57ac1fc
 EBUILD moodle-1.9.15.ebuild 3135 RMD160 adda3db1ee7b39f5cd405a60f7344c75e7e21ca0 SHA1 84d2ed08da3ea3ea951a826e5c57a6c62f6d28df SHA256 d8e3079d912d16463a82362a6535ff75c266b3f4fc4d70c9351f029d0dccc632
 EBUILD moodle-1.9.16.ebuild 3135 RMD160 03c8589bc3e186669de0786056d91a627631ed3b SHA1 ddb9fd7accc11087844255de11a9644fd53d26b6 SHA256 90f66d5eb6566565f93fc2999411d90567013cadef94148b170f2a342a213937
 EBUILD moodle-2.0.6.ebuild 3980 RMD160 c2a5ef7d9bab806af2ca8a9a4d3edc266f1b7262 SHA1 1f47a5c5595cb9d62ff9fa1482b0696d46b2042d SHA256 8844a5420493397d26d4202fa03a670a0e3aded50ca41472296e4cb2ec0e6207
 EBUILD moodle-2.0.7.ebuild 3980 RMD160 b96512dad740599b119c1b83454169cc8dac93e3 SHA1 e5cd447c2e819d12d25d485ce518ec38898a1430 SHA256 63a65dd64eae1fc206e5cae4f23f084b94a51d60bcf7266c7e1a13a6e829881f
 EBUILD moodle-2.1.3.ebuild 3980 RMD160 5d3778f838ddda25202fc66eff260aa4f47670bb SHA1 5b81bb1b1492a5b62f09e7a2261fcac6d5267a20 SHA256 1f417b90589d7dd6d3c11161f3dcb493337b71e75c4dc1642cc3889f04e482dd
 EBUILD moodle-2.1.4.ebuild 3980 RMD160 d6f989118c100e0a264a6160ae4e695e6f776c58 SHA1 1d1401e4dbaaf072c8d13e2529bf95fb57be49fa SHA256 487a020388b69dee9c4483d626bc133fa2e236d9c401224ca652a980a99cfe95
-MISC ChangeLog 3375 RMD160 820fde7f906c859b88e6eb997cf17a8e21245ee2 SHA1 719d2fedc8918f25e8017797a416eafb3a8fb2da SHA256 2f426176d669df0a5ee9c406646fe154213b960281e076e2f47af8955a6b9d96
+EBUILD moodle-2.2.1.ebuild 3980 RMD160 2daaeb22cef7a54720d618f2077c772cb75b5d72 SHA1 2a3715e4c50ef17ed6cf9a990c24d7e25fe4ddcc SHA256 b4a41661957741d8bb64e7f63ec6b802936ca2bc2d48d6efc22a2605d1d994c3
+MISC ChangeLog 3516 RMD160 335ecd8f2855033f304b48827bd0ebf2e72317fd SHA1 2ec18f383cd1a6e82bdb70e2310c836355727862 SHA256 ea74de10dc61cbfaee0318cac0453ebb65537da84d09ee0490b83543b220ea6a
 MISC metadata.xml 256 RMD160 7cd5a16a6eade95f71d40edbb4729baadfbc7649 SHA1 809eeef12d97ae39db024aea151a70c7363475b7 SHA256 8230894d717ea9f2e42f9c7de54671126820f89bf05ca96ec5f03842b12378e1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREIAAYFAk8J1rwACgkQl5yvQNBFVTXdmwCfSZBdqmwRVh5DkDpBub0mTDnT
-JXwAn1tHG7VjMfXNCqVBTL2a7bX70WnO
-=x3fn
+iEYEAREIAAYFAk8J22oACgkQl5yvQNBFVTVvHQCeM6+MuylYvrWuWHwngiTEXh6o
+iE0An3t3kEePm2HqDtQDPMSGpAL3wmU0
+=mWma
 -----END PGP SIGNATURE-----
