@@ -1,6 +1,11 @@
 # ChangeLog for www-apps/moodle
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/moodle/ChangeLog,v 1.16 2012/01/08 17:47:30 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/moodle/ChangeLog,v 1.17 2012/01/08 18:07:28 blueness Exp $
+
+*moodle-2.2.1 (08 Jan 2012)
+
+  08 Jan 2012; Anthony G. Basile <blueness@gentoo.org> +moodle-2.2.1.ebuild:
+  Added ebuild for the 2.2 branch
 
 *moodle-2.1.4 (08 Jan 2012)
 *moodle-2.0.7 (08 Jan 2012)
